tool-tip can now appear in correct place with overflow-scroll! 🧬

--- a/src/styles.css
+++ b/src/styles.css
@@ -6,3 +6,7 @@
 body {
    @apply text-zinc-200;
 }
+
+.directive-tool-tip {
+   @apply text-sm flex justify-center items-center pointer-events-none absolute transition-all duration-75
+}
